trunk/Archive2/0b/252c295f6fe2be/output
main.cpp: In function 'std::__cxx11::string trim(const string&)':
main.cpp:5:22: error: 'space' does not name a type
     static constexpr space std::string{" \n\t\r\v\f"};
                      ^
main.cpp:6:40: error: 'space' was not declared in this scope
     auto first = str.find_first_not_of(space);
                                        ^
